test/consumingLhs9.slq

def main(){
	x:=H(0);
	def f()⇒x;
	measure(f)():= /// error
		measure(f)();
}
